2006-09-19  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c: 
	* hildon-status-bar/hildon-status-bar-main.h:
	  Send dbus signal when sb's conditional or 
	  temporal plugin fulfill its  condition.

2006-09-19  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/home-applet-handler.c:
	  - do not the handler to the hash table until we are sure we could
	    open the applet
	* hildon-home/hildon-home-titlebar.c: Made the Applet settings menu item
	  disabled by default

2006-09-19  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-background-dialog.c: set spacing to the
	  dialog vbox

2006-09-19  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/background-manager.c: Set the first_run flag to FALSE
	  even when the cache could not be read

2006-09-19  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-applet.c: Do not use g_error because it aborts

2006-09-18  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-area.[ch]:
	  - Added a add/remove handler
	  to set the layout as having changed in these cases
	  - _save_configuration now returns an error code so the flash_full
	  not can be displayed when appropriate
	* hildon-home/hildon-window.c: reflect these changes

2006-09-18  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/hildon-thumb-menu-item.c: set a name to the menu's
	  toplevel window to apply thumb/normal theming of the scroll arrow
	  Fixes: NB#38690

2006-09-18  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.[ch], 
	  libhildonmenu/hildon-thumb-menu-item.[ch]: Added LGPL header
	* ibhildonmenu/hildon-thumb-menu-item.h: Removed duplicate code

2006-09-18  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-area.c: Fixed the leak of a string array

2006-09-18  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.c: Fixed the leak of a GtkTreePath and
	  2 strings. Fixes: NB#40645
