@@ -1,3 +1,9 @@
+2006-09-20  Moises Martinez <moises.martinzes@nokia.com>
+
+	* hildon-status-bar/hildon-status-bar-main.c:
+	- Implemented dbus method for communicating with
+	  cpa-navigatorapplet. Required by NB #31079.
+
 2006-09-19  Moises Martinez <moises.martinzes@nokia.com>
 
 	* hildon-status-bar/hildon-status-bar-main.c: 
